# sc2-match-briefer

./: README.md  enums.py  pyproject.toml  utils.py
models/: character.py  player.py  shared.py  team.py
sc_match_briefer/: analyze.py  enums.py  logger.py  overlay_manager.py  service.py  sounds.py  utils.py
sc_match_briefer/models/: character.py  config.py  player.py  shared.py  team.py  team_history.py
smurfsniper/: cli.py  service.py
smurfsniper/analyze/: __init__.py  players.py  teams.py
smurfsniper/analyze/prompts/: 2v2_analysis.json
smurfsniper/models/: character.py  player.py  team.py  team_history.py
smurfsniper/ui/: overlays.py
